Add the next example.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,6 +1,8 @@
 .PHONY: clean
 clean:
+	go clean -modcache
 	$(MAKE) -C 000-new-project clean
 	$(MAKE) -C 001-existing-project clean
+	$(MAKE) -C 002-new-clone clean
 
 # vim: set nocin ai ts=8 sw=4 noet:
