All slides accounted for, if not filled in.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,5 +4,6 @@ clean:
 	$(MAKE) -C 000-new-project clean
 	$(MAKE) -C 001-existing-project clean
 	$(MAKE) -C 002-new-clone clean
+	$(MAKE) -C 003-upgrading-dependencies clean
 
 # vim: set nocin ai ts=8 sw=4 noet:
